--- a/app/views/create-account/offence-imposition/offence-1/add-offence-1-minor-creditor-2.html
+++ b/app/views/create-account/offence-imposition/offence-1/add-offence-1-minor-creditor-2.html
@@ -255,7 +255,7 @@
 
   </form>
 
-  <p class="govuk-body"><a class="govuk-link govuk-! govuk-link--no-visited-state" href="test-offence.html">Cancel</a></p>
+  <p class="govuk-body"><a class="govuk-link govuk-! govuk-link--no-visited-state" href="add-offence-1.html">Cancel</a></p>
 
   </div>
 </div>
